ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: forum-ingress
spec:
  defaultBackend:
    service:
      name: k8s-frontend-service
      port: 
        number: 3000
  rules:
    - host: "k8s.forum.com"
      http:
       paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: k8s-frontend-service
              port:
                number: 3000
        
        - path: /backend
          pathType: ImplementationSpecific
          backend:
            service:
              name: k8s-backend-service
              port:
                number: 8000
